<resources>
    <string name="app_name">FrumToronto</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_directory">DirectoryActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_alerts">AlertsActivity</string>
    <string name="title_activity_classified">ClassifiedActivity</string>
    <string name="title_activity_shuls_and_tefillos">ShulsAndTefillosActivity</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="calendar_button_text">Calendar</string>
    <string name="directory_button_text">Directory</string>
    <string name="alerts_button_text">Alerts</string>
    <string name="shuls_and_tefillos_button_text">Shuls and tefillos</string>
    <string name="classified_button_text">Classified</string>
    <string name="contact_us_button_text">Contact us</string>
    <string name="show_toronto_weather_button_text">Click here for Toronto weather</string>
    <string name="show_local_weather_button_text">Click here to check the weather in your area</string>
    <string name="directory_rates_button_text">Directory rates</string>
    <string name="advanced_search_button_text">Advanced Search</string>
    <string name="title_activity_buisness_directory">BuisnessDirectoryActivity</string>
    <string name="title_activity_register_your_buisness">RegisterYourBuisnessActivity</string>
    <string name="title_activity_calendar_web_page">CalendarWebPageActivity</string>
    <string name="title_activity_directory_rates">DirectoryRates</string>
    <string name="title_activity_advanced_search">AdvancedSearchActivity</string>
    <string name="title_activity_business_services">BusinessServices</string>
    <string name="title_activity_clothing_and_accessories">ClothingAndAccessoriesActivity</string>
    <string name="title_activity_financial_services">FinancialServicesActivity</string>
    <string name="title_activity_government_and_institutions">GovernmentAndInstitutionsActivity</string>
    <string name="title_activity_health_and_beauty">HealthAndBeautyActivity</string>
    <string name="title_activity_home_and_garden">HomeAndGardenActivity</string>
    <string name="title_activity_jewish_community_services">JewishCommunityServicesActivity</string>
    <string name="title_activity_kosher_foods">KosherFoodsActivity</string>
    <string name="title_activity_property_and_accomodations">PropertyAndAccomodationsActivity</string>
    <string name="title_activity_services">ServicesActivity</string>
    <string name="title_activity_shopping">ShoppingActivity</string>
    <string name="title_activity_simchas">SimchasActivity</string>
    <string name="title_activity_sport_and_leisure">SportAndLeisureActivity</string>
    <string name="title_activity_transport_and_auto">TransportAndAutoActivity</string>
    <string name="title_activity_weekly_shiurim">WeeklyShiurimActivity</string>
    <string name="title_activity_zmanim">ZmanimActivity</string>
    <string name="title_activity_bulletins_and_alerts">BulletinsAndAlertsActivity</string>
    <string name="title_activity_kosher_alerts">KosherAlertsActivity</string>
    <string name="title_activity_shiva_notifications">ShivaNotificationsActivity</string>
    <string name="title_activity_classified_web_page">ClassifiedWebPageActivity</string>
    <string name="title_activity_weekly_specials">WeeklySpecialsActivity</string>
    <string name="title_activity_davening_schedule">DaveningScheduleActivity</string>
    <string name="title_activity_shul_listings">ShulListingsActivity</string>
    <string name="title_activity_mincha_list">MinchaListActivity</string>
    <string name="title_activity_community_newsletters">CommunityNewslettersActivity</string>
    <string name="title_activity_weekly_publications">WeeklyPublicationsActivity</string>
    <string name="title_activity_tehillim_list">TehillimListActivity</string>
    <string name="title_activity_contact_us_webpage">ContactUsWebpageActivity</string>
    <string name="title_activity_advertising_rates">AdvertisingRatesActivity</string>
    <string name="title_activity_frequently_asked_questions">FrequentlyAskedQuestionsActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="home_and_garden_button_text">Home and garden</string>
    <string name="business_services_button_text">Business services</string>
    <string name="financial_services_button_text">Financial services</string>
    <string name="simchas_button_text">Simchas</string>
    <string name="sport_and_leisure_button_text">Sport and leisure</string>
    <string name="transport_and_auto_button_text">Transport and auto</string>
    <string name="shopping_button_text">Shopping</string>
    <string name="business_directory_button_text">Business directory</string>
    <string name="clothing_and_accessories_button_text">Clothing and accessories</string>
    <string name="property_and_accommodations_button_text">Property and accommodations</string>
    <string name="government_and_institutions_button_text">Government and institutions</string>
    <string name="register_your_business_button_text">Register your business</string>
    <string name="heath_and_beauty_button_text">Heath and beauty</string>
    <string name="jewish_community_services_button_text">Jewish community services</string>
    <string name="kosher_foods_activity">Kosher foods</string>
    <string name="services_button_text">Services</string>
    <string name="weekly_shiurim_button_text">Weekly shiurim</string>
    <string name="zmanim_button_text">Zmanim</string>
    <string name="weekly_specials_button_text">Weekly specials</string>
    <string name="davening_schedule_button_text">Davening schedule</string>
    <string name="shul_listings_button_text">Shul listings</string>
    <string name="mincha_list_button_text">Mincha list</string>
    <string name="newsletters_button_text">Newsletters</string>
    <string name="weekly_publications_button_text">Weekly publications</string>
    <string name="tehillim_list_button_text">Tehillim list</string>
    <string name="advertising_rates_button_text">Advertising rates</string>
    <string name="frequently_asked_questions_button_text">Frequently asked questions</string>
    <string name="about_us_button_text">About us</string>
    <string name="ask_the_rabbi_button_text">Ask the rabbi</string>
    <string name="internet_connection_error_message">Internet service is unavailable. Please check your Internet connection and try again.</string>
    <string name="query_error_message">Error getting data from the website</string>
    <string name="no_web_browser_error_message">You need to install a web browser for this feature to work</string>
    <string name="loading_message">Loading</string>
    <string name="become_a_member_button_text">Become a member</string>
</resources>
