<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_shuls_and_tefillos"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.boes.peretz.frumtoronto.ShulsAndTefillosActivity"
    tools:showIn="@layout/activity_shuls_and_tefillos">

    <Button
        android:id="@+id/button36"
        android:text="@string/davening_schedule_button_text"
        android:textAllCaps="false"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="14dp"
        android:onClick="showDaveningSchedule"/>

    <Button
        android:id="@+id/button37"
        android:text="@string/shul_listings_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button36"
        android:layout_alignRight="@+id/button36"
        android:layout_alignEnd="@+id/button36"
        android:layout_marginTop="24dp"
        android:onClick="showShulListings"/>

    <Button
        android:id="@+id/button38"
        android:text="@string/mincha_list_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button37"
        android:layout_alignLeft="@+id/button37"
        android:layout_alignStart="@+id/button37"
        android:layout_marginTop="26dp"
        android:onClick="showMinchaListings"/>

    <Button
        android:id="@+id/button39"
        android:text="@string/newsletters_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button38"
        android:layout_alignLeft="@+id/button38"
        android:layout_alignStart="@+id/button38"
        android:layout_marginTop="33dp"
        android:onClick="showNewsletters"/>

    <Button
        android:id="@+id/button40"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button36"
        android:layout_alignBottom="@+id/button36"
        android:layout_centerHorizontal="true"
        android:text="@string/weekly_shiurim_button_text"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button41"
        android:text="@string/weekly_publications_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button38"
        android:layout_alignLeft="@+id/button40"
        android:layout_alignStart="@+id/button40"
        android:onClick="showWeeklyPublications"/>

    <Button
        android:id="@+id/button42"
        android:text="@string/zmanim_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button38"
        android:layout_alignLeft="@+id/button41"
        android:layout_alignStart="@+id/button41"/>

    <Button
        android:id="@+id/button43"
        android:text="@string/tehillim_list_button_text"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button39"
        android:layout_alignLeft="@+id/button42"
        android:layout_alignStart="@+id/button42"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:onClick="showTehillimList"/>
</RelativeLayout>

